...
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:labelFor="@+id/coffee_title"
        android:text="@string/coffee_title_label"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
...
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/coffee_description_view"
        android:layout_marginStart="8dp" />

    <CheckBox
        android:id="@+id/coffee_whipped"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/whipped_cream_label"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/almond_milk_checkbox"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Spinner
        android:id="@+id/caramel_shots_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:entries="@array/shot_count_list"
...
        android:hint="@string/special_instructions_text"
        android:inputType="text"
        android:selectAllOnFocus="false"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:background="@layout/edittext_border_test"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coffee_whipped" />

    <LinearLayout
        android:id="@+id/linearLayout"
...

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/add_to_cart_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/add_to_cart_button_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <ImageButton
                android:id="@+id/save_as_favorite_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
...
